Updates to classes

--- a/classes.html
+++ b/classes.html
@@ -108,33 +108,72 @@
         class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
       >
         <div
-          class="flex flex-col py-10 px-3 space-y-10 bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
+          class="flex flex-col py-5 space-y-8 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
         >
-          <h1 class="text-2xl md:text-4xl lg:text-6xl font-bold">
-            What I offer
-          </h1>
-          <div class="grid grid-cols-2 md:grid-cols-4 gap-10">
-            <img
-              src="./assets/images/Aware-Tots.png"
-              alt="Class 1"
-              class="w-64 hover:scale-105 cursor-pointer"
-            />
-            <img
-              src="./assets/images/Aware-Kids.png"
-              alt="Class 2"
-              class="w-64 hover:scale-105 cursor-pointer"
-            />
-            <img
-              src="./assets/images/Aware-Teens.png"
-              alt="Class 3"
-              class="w-64 hover:scale-105 cursor-pointer"
-            />
-            <img
-              src="./assets/images/Adult-Group.png"
-              alt="Class 4"
-              class="w-64 hover:scale-105 cursor-pointer"
-            />
-          </div>
+          <img
+            src="./assets/images/Aware-Tots.png"
+            alt="Aware Tots"
+            class="w-44 md:w-64 rounded-xl"
+          />
+          <p
+            class="text-left px-6 md:px-32 font-medium md:font-semibold text-lg"
+          >
+            Placeholder example text for Aware Tots classes.
+          </p>
+        </div>
+      </div>
+      <div
+        class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
+      >
+        <div
+          class="flex flex-col py-5 space-y-8 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
+        >
+          <img
+            src="./assets/images/Aware-Kids.png"
+            alt="Aware Kids"
+            class="w-44 md:w-64 rounded-xl"
+          />
+          <p
+            class="text-left px-6 md:px-32 font-medium md:font-semibold text-lg"
+          >
+            Placeholder example text for Aware Kids classes.
+          </p>
+        </div>
+      </div>
+      <div
+        class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
+      >
+        <div
+          class="flex flex-col py-5 space-y-8 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
+        >
+          <img
+            src="./assets/images/Aware-Teens.png"
+            alt="Aware Teens"
+            class="w-44 md:w-64 rounded-xl"
+          />
+          <p
+            class="text-left px-6 md:px-32 font-medium md:font-semibold text-lg"
+          >
+            Placeholder example text for Aware Teens classes.
+          </p>
+        </div>
+      </div>
+      <div
+        class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
+      >
+        <div
+          class="flex flex-col py-5 space-y-8 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
+        >
+          <img
+            src="./assets/images/Adult-Group.png"
+            alt="Adult Group"
+            class="w-44 md:w-64 rounded-xl"
+          />
+          <p
+            class="text-left px-6 md:px-32 font-medium md:font-semibold text-lg"
+          >
+            Placeholder example text for Adult Group classes.
+          </p>
         </div>
       </div>
     </section>
@@ -144,8 +183,8 @@
         <div class="container py-5">
           <div class="flex flex-col justify-center text-center">
             <p class="font-medium">
-              Copyright &copy; 2024 Happy Minds Grateful Hearts. | Developed
-              By <span class="text-color-third">Luke O'Kane.</span>
+              Copyright &copy; 2024 Happy Minds Grateful Hearts. | Developed By
+              <span class="text-color-third">Luke O'Kane.</span>
             </p>
           </div>
         </div>
