--- a/about.html
+++ b/about.html
@@ -132,6 +132,30 @@
       </div>
     </section>
 
+    <section id="homelife">
+      <div
+        class="container md:py-20 mt-5 flex flex-col items-center text-center mb-20"
+      >
+        <div
+          class="flex flex-col py-5 space-y-8 items-center bg-color-secondary border-2 border-color-primary rounded-2xl w-80 md:w-9/12"
+        >
+          <img
+            src="./assets/images/home-life.png"
+            alt="Home Life"
+            class="w-44 md:w-64 rounded-xl"
+          />
+          <p
+            class="text-left px-6 md:px-32 font-medium md:font-semibold text-lg"
+          >
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+            eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim
+            ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+            aliquip ex ea commodo consequat.
+          </p>
+        </div>
+      </div>
+    </section>
+
     <section id="footer">
       <div class="relative">
         <div class="container py-5">
