testing increased icon size for contact section on mobile

--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
           </h1>
           <div class="space-y-8 font-bold py-8 lg:px-20">
             <div class="flex flex-col space-y-4">
-              <i class="fa-solid fa-phone md:text-3xl text-color-third"></i>
+              <i class="fa-solid fa-phone text-xl md:text-3xl text-color-third"></i>
               <p class="text-sm md:text-xl lg:text-2xl">07739 660091</p>
             </div>
             <div class="flex flex-col space-y-4">
