testing increased icon size for contact section on mobile

--- a/contact.html
+++ b/contact.html
@@ -120,7 +120,7 @@
             </div>
             <div class="flex flex-col space-y-4">
               <i
-                class="fa-regular fa-envelope md:text-3xl text-color-third"
+                class="fa-regular fa-envelope text-xl md:text-3xl text-color-third"
               ></i>
               <p class="text-sm md:text-xl lg:text-2xl">
                 happymindsgratefulhearts@gmail.com
@@ -128,7 +128,7 @@
             </div>
             <div class="flex flex-col space-y-4">
               <i
-                class="fa-solid fa-location-dot md:text-3xl text-color-third"
+                class="fa-solid fa-location-dot text-xl md:text-3xl text-color-third"
               ></i>
               <p class="text-sm md:text-xl lg:text-2xl px-3">
                 Well-being Hub NI, The Station House, 16a Derganagh Road, BT45
