--- a/index.html
+++ b/index.html
@@ -253,12 +253,12 @@
             </h1>
             <div class="space-y-8 font-bold py-8 lg:px-20">
               <div class="flex flex-col space-y-4">
-                <i class="fa-solid fa-phone md:text-3xl text-color-third"></i>
+                <i class="fa-solid fa-phone text-xl md:text-3xl text-color-third"></i>
                 <p class="text-sm md:text-xl lg:text-2xl">07739 660091</p>
               </div>
               <div class="flex flex-col space-y-4">
                 <i
-                  class="fa-regular fa-envelope md:text-3xl text-color-third"
+                  class="fa-regular fa-envelope text-xl md:text-3xl text-color-third"
                 ></i>
                 <p class="text-sm md:text-xl lg:text-2xl">
                   happymindsgratefulhearts@gmail.com
@@ -266,7 +266,7 @@
               </div>
               <div class="flex flex-col space-y-4">
                 <i
-                  class="fa-solid fa-location-dot md:text-3xl text-color-third"
+                  class="fa-solid fa-location-dot text-xl md:text-3xl text-color-third"
                 ></i>
                 <p class="text-sm md:text-xl lg:text-2xl px-3">
                   Well-being Hub NI, The Station House, 16a Derganagh Road, BT45
