--- a/classes.html
+++ b/classes.html
@@ -29,9 +29,58 @@
             <li class="hover:scale-110">
               <a href="./about.html" class="hover:underline">About</a>
             </li>
-            <li class="hover:scale-110">
-              <a href="./classes.html" class="hover:underline">Services</a>
-            </li>
+            <!-- Dropdown Menu -->
+            <div class="relative">
+              <button
+                class="dropdown-toggle flex items-center gap-5 rounded hover:scale-110"
+              >
+                <span class="pointer-events-none text-xl font-bold"
+                  >Services</span
+                >
+                <svg
+                  class="w-3 h-3 pointer-events-none text-xl"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <title>chevron-down</title>
+                  <g fill="none">
+                    <path
+                      d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                      stroke="currentColor"
+                      stroke-width="1.5"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></path>
+                  </g>
+                </svg>
+              </button>
+              <div
+                class="dropdown-menu flex flex-col absolute hidden bg-color-secondary border-2 text-white rounded-b-lg pb-2 w-48 mt-4"
+              >
+                <a
+                  href="./classes.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >Classes</a
+                >
+                <a
+                  href="./one2one.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >One to One</a
+                >
+                <a
+                  href="./workshops.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >Workshops</a
+                >
+                <a
+                  href="./retreats.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >Retreats</a
+                >
+              </div>
+            </div>
             <li class="hover:scale-110">
               <a href="./reviews.html" class="hover:underline">Reviews</a>
             </li>
@@ -72,11 +121,58 @@
                 >About</a
               >
             </li>
-            <li class="hover:scale-110">
-              <a id="hLink" href="./classes.html" class="hover:hover:scale-110"
-                >Services</a
+            <!-- Dropdown Menu -->
+            <div class="relative">
+              <button
+                class="dropdown-toggle flex items-center gap-5 rounded hover:scale-110"
               >
-            </li>
+                <span class="pointer-events-none text-xl font-bold"
+                  >Services</span
+                >
+                <svg
+                  class="w-3 h-3 pointer-events-none text-xl"
+                  xmlns="http://www.w3.org/2000/svg"
+                  width="24"
+                  height="24"
+                  viewBox="0 0 24 24"
+                >
+                  <title>chevron-down</title>
+                  <g fill="none">
+                    <path
+                      d="M19.5 8.25l-7.5 7.5-7.5-7.5"
+                      stroke="currentColor"
+                      stroke-width="1.5"
+                      stroke-linecap="round"
+                      stroke-linejoin="round"
+                    ></path>
+                  </g>
+                </svg>
+              </button>
+              <div
+                class="dropdown-menu flex flex-col absolute hidden bg-color-secondary text-white rounded-b-lg pb-2 w-48 mt-4"
+              >
+                <a
+                  href="./classes.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >Classes</a
+                >
+                <a
+                  href="./one2one.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >One to One</a
+                >
+                <a
+                  href="./workshops.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >Workshops</a
+                >
+                <a
+                  href="./retreats.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                  >Retreats</a
+                >
+              </div>
+            </div>
             <li class="hover:scale-110">
               <a id="hLink" href="./reviews.html" class="hover:scale-110"
                 >Reviews</a
@@ -219,6 +315,31 @@
         link.addEventListener("click", () => {
           menu.classList.toggle("hidden");
           faSolid.classList.toggle("fa-xmark");
+        });
+      });
+
+      // Toggle Services Dropdown Menu
+      document.addEventListener("DOMContentLoaded", () => {
+        // Select all dropdown toggle buttons
+        const dropdownToggles = document.querySelectorAll(".dropdown-toggle");
+
+        dropdownToggles.forEach((toggle) => {
+          toggle.addEventListener("click", () => {
+            // Find the next sibling element which is the dropdown menu
+            const dropdownMenu = toggle.nextElementSibling;
+
+            // Toggle the 'hidden' class to show or hide the dropdown menu
+            if (dropdownMenu.classList.contains("hidden")) {
+              // Hide any open dropdown menus before showing the new one
+              document.querySelectorAll(".dropdown-menu").forEach((menu) => {
+                menu.classList.add("hidden");
+              });
+
+              dropdownMenu.classList.remove("hidden");
+            } else {
+              dropdownMenu.classList.add("hidden");
+            }
+          });
         });
       });
     </script>
