--- a/one2one.html
+++ b/one2one.html
@@ -57,11 +57,11 @@
                 </svg>
               </button>
               <div
-                class="dropdown-menu flex flex-col absolute hidden bg-color-secondary border-2 text-white rounded-b-lg pb-2 w-48 mt-4"
+                class="dropdown-menu flex flex-col absolute hidden bg-color-secondary border-2 text-white rounded-b-lg pb-2 w-48 mt-5 gap-6"
               >
                 <a
                   href="./classes.html"
-                  class="block px-6 py-2 text-lg hover:scale-110"
+                  class="block px-6 py-2 text-lg hover:scale-110 mt-5"
                   >Classes</a
                 >
                 <a
@@ -79,6 +79,10 @@
                   class="block px-6 py-2 text-lg hover:scale-110"
                   >Retreats</a
                 >
+                <a
+                  href="./retreats.html"
+                  class="block px-6 py-2 text-lg hover:scale-110"
+                ></a>
               </div>
             </div>
             <li class="hover:scale-110">
