--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body
-    class="bg-gradient-bg bg-no-repeat bg-fixed text-color-primary tracking-wider"
+    class="bg-gradient-bg bg-no-repeat bg-fixed text-color-primary tracking-wider min-h-screen"
   >
     <!-- Navbar -->
     <header class="sticky top-0 z-50">
