Adding classes logo

--- a/index.html
+++ b/index.html
@@ -275,6 +275,13 @@
               What I offer
             </h1>
             <div class="grid grid-cols-2 md:grid-cols-4 gap-10">
+              <a href="./classes.html">
+                <img
+                  src="./assets/images/classes.png"
+                  alt="Class 4"
+                  class="w-64 hover:scale-105 cursor-pointer"
+                />
+              </a>
               <a href="./one2one.html">
                 <img
                   src="./assets/images/one2one.png"
@@ -297,9 +304,6 @@
                 />
               </a>
             </div>
-            <a href="./classes.html" class="hover:font-bold"
-              >View all classes...</a
-            >
           </div>
         </div>
       </section>
