Adding smaller text to services dropdown for all mobile menus

--- a/one2one.html
+++ b/one2one.html
@@ -157,17 +157,17 @@
               >
                 <a
                   href="./classes.html"
-                  class="block px-6 py-2 text-lg hover:scale-110"
+                  class="block px-6 py-2 text-sm hover:scale-110"
                   >Classes</a
                 >
                 <a
                   href="./workshops.html"
-                  class="block px-6 py-2 text-lg hover:scale-110"
+                  class="block px-6 py-2 text-sm hover:scale-110"
                   >Workshops</a
                 >
                 <a
                   href="./retreats.html"
-                  class="block px-6 py-2 text-lg hover:scale-110"
+                  class="block px-6 py-2 text-sm hover:scale-110"
                   >Retreats</a
                 >
               </div>
