--- a/retreats.html
+++ b/retreats.html
@@ -157,17 +157,17 @@
               >
                 <a
                   href="./classes.html"
-                  class="block px-6 py-2 text-lg hover:scale-110"
+                  class="block px-6 py-2 text-sm hover:scale-110"
                   >Classes</a
                 >
                 <a
                   href="./one2one.html"
-                  class="block px-6 py-2 text-lg hover:scale-110"
+                  class="block px-6 py-2 text-sm hover:scale-110"
                   >One to One</a
                 >
                 <a
                   href="./workshops.html"
-                  class="block px-6 py-2 text-lg hover:scale-110"
+                  class="block px-6 py-2 text-sm hover:scale-110"
                   >Workshops</a
                 >
               </div>
