Added real testimonials

--- a/index.html
+++ b/index.html
@@ -83,8 +83,7 @@
                 <a
                   href="./retreats.html"
                   class="block px-6 py-2 text-lg hover:scale-110"
-                  ></a
-                >
+                ></a>
               </div>
             </div>
             <li class="hover:scale-110">
@@ -325,24 +324,26 @@
                   class="fa-solid fa-quote-left md:text-3xl text-color-third"
                 ></i>
                 <p class="md:text-2xl font-semibold">
-                  "Working with Amanda has been nothing short of amazing. She is
-                  an underatated professional, who is absolutely superb at what
-                  she does. After coming back from Splash and Amanda's
-                  breathwork class, I felt completely relaxed."
+                  "My four year old loves theses classes they have enabled to
+                  her understand her feelings more in such a fun environment.
+                  She absolutely loves the art and craft along with the games in
+                  class each time she attends. Would highly recommend these
+                  classes. ❤️"
                 </p>
-                <p class="md:text-xl">- Person 1</p>
+                <p class="md:text-xl">- Natalie Éireamhón</p>
               </div>
               <div class="space-y-3 px-4">
                 <i
                   class="fa-solid fa-quote-left md:text-3xl text-color-third"
                 ></i>
                 <p class="md:text-2xl font-semibold">
-                  "Working with Amanda has been nothing short of amazing. She is
-                  an underatated professional, who is absolutely superb at what
-                  she does. After coming back from Splash and Amanda's
-                  breathwork class, I felt completely relaxed."
+                  "So happy there is a class designed for little minds that are
+                  so full of curiosity and creativity to help instill the tools
+                  needed to cope with this crazy world. My daughter has loved
+                  this class from day one and I would highly recommend to
+                  anyone."
                 </p>
-                <p class="md:text-xl">- Person 2</p>
+                <p class="md:text-xl">- Sheena Otterson</p>
               </div>
             </div>
             <a href="./reviews.html" class="hover:font-bold">Read more...</a>
