--- a/reviews.html
+++ b/reviews.html
@@ -216,48 +216,66 @@
                 class="fa-solid fa-quote-left md:text-3xl text-color-third"
               ></i>
               <p class="md:text-2xl font-semibold">
-                "Working with Amanda has been nothing short of amazing. She is
-                an underatated professional, who is absolutely superb at what
-                she does. After coming back from Splash and Amanda's breathwork
-                class, I felt completely relaxed."
+                "My four year old loves theses classes they have enabled to her
+                understand her feelings more in such a fun environment. She
+                absolutely loves the art and craft along with the games in class
+                each time she attends. Would highly recommend these classes. ❤️"
               </p>
-              <p class="md:text-xl">- Person 1</p>
+              <p class="md:text-xl">- Natalie Éireamhón</p>
             </div>
             <div class="space-y-3 px-4">
               <i
                 class="fa-solid fa-quote-left md:text-3xl text-color-third"
               ></i>
               <p class="md:text-2xl font-semibold">
-                "Working with Amanda has been nothing short of amazing. She is
-                an underatated professional, who is absolutely superb at what
-                she does. After coming back from Splash and Amanda's breathwork
-                class, I felt completely relaxed."
+                "So happy there is a class designed for little minds that are so
+                full of curiosity and creativity to help instill the tools
+                needed to cope with this crazy world. My daughter has loved this
+                class from day one and I would highly recommend to anyone."
               </p>
-              <p class="md:text-xl">- Person 2</p>
+              <p class="md:text-xl">- Sheena Otterson</p>
             </div>
             <div class="space-y-3 px-4">
               <i
                 class="fa-solid fa-quote-left md:text-3xl text-color-third"
               ></i>
               <p class="md:text-2xl font-semibold">
-                "Working with Amanda has been nothing short of amazing. She is
-                an underatated professional, who is absolutely superb at what
-                she does. After coming back from Splash and Amanda's breathwork
-                class, I felt completely relaxed."
+                "My daughter loves these classes. Looks forward to it so much.
+                Highly recommend!"
               </p>
-              <p class="md:text-xl">- Person 1</p>
+              <p class="md:text-xl">- Laura Gourley</p>
             </div>
             <div class="space-y-3 px-4">
               <i
                 class="fa-solid fa-quote-left md:text-3xl text-color-third"
               ></i>
               <p class="md:text-2xl font-semibold">
-                "Working with Amanda has been nothing short of amazing. She is
-                an underatated professional, who is absolutely superb at what
-                she does. After coming back from Splash and Amanda's breathwork
-                class, I felt completely relaxed."
+                "I went to the taster meditation class tonight in the Studio,
+                Maghera. What an amazing class. Amanda is such a warm, open and
+                down to earth lady that she immediately puts you at ease. Thanks
+                so much for sharing your expertise and time with us 💕💕 "
               </p>
-              <p class="md:text-xl">- Person 1</p>
+              <p class="md:text-xl">- Oonagh Hughes</p>
+            </div>
+            <div class="space-y-3 px-4">
+              <i
+                class="fa-solid fa-quote-left md:text-3xl text-color-third"
+              ></i>
+              <p class="md:text-2xl font-semibold">
+                "Amanda came to our playgroup & delivered sessions for 3-4 year
+                olds the sessions were fantastic with a good mixture of
+                activities to keep the children focused, she has a vast range of
+                story books which always were followed by art based activities
+                the children were engaged from the start, she gave the staff and
+                children various strategies to calm the mind & focus on the
+                well-being of everyone. Amanda has such a calming affect & is
+                very focused on listening to the child's voice. our children
+                thoroughly enjoyed her sessions we even got her back for a
+                second block, and will definitely be getting her back in the
+                future. thank you so much Amanda, we look forward to having you
+                back at Ballyronan Community Playgroup. xx😃"
+              </p>
+              <p class="md:text-xl">- Louise Hamilton</p>
             </div>
           </div>
         </div>
