--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-screen h-dvh">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -14,7 +14,7 @@
     />
   </head>
   <body
-    class="bg-gradient-bg bg-no-repeat bg-fixed text-color-primary tracking-wider min-h-dvh overflow-hidden"
+    class="bg-gradient-bg bg-no-repeat bg-fixed text-color-primary tracking-wider min-h-dvh overflow-hidden h-screen h-dvh"
   >
     <!-- Navbar -->
     <header class="sticky top-0 z-50">
