--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
         </div>
       </section>
       <section id="footer">
-        <div class="relative">
+        <div class="fixed">
           <div class="container py-5">
             <div class="flex flex-col justify-center text-center">
               <p class="font-medium">
